tests/errors/syn.missing-expr.branch-condition.or
main :: () -> void {
    while x := true x; {
        x;
    };
};
